# ObjectLoader

./: CMakeLists.txt  TODO
src/: CMakeLists.txt  Face.cpp  Face.h  Matrix4x4.h  Obj.cpp  Obj.h  ObjLexer.cpp  ObjLexer.h  SDLTimer.cpp  SDLTimer.h  Shaders.h  Token.cpp  Token.h  Vertex.cpp  Vertex.h  main.cpp
